# fbot_rl

./: .gitignore  pyproject.toml
fbot_rl/: __init__.py
fbot_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fbot_rl/agents/robots/boris/: __init__.py  boris.py
fbot_rl/assets/robots/boris/: boris.urdf  shark_v1.xacro  shark_v1_gazebo_plugins.xacro
fbot_rl/assets/robots/boris/v0/: config.json  motor.part  motor.stl  motor_visual.stl  robot.urdf  wheel.part  wheel.stl  (+1 more)
fbot_rl/envs/tasks/: __init__.py
fbot_rl/envs/tasks/mobile_manipulation/: __init__.py  open_cabinet_drawer.py
runs/FbotOpenCabinetDrawer-v1__train_ppo_state__1__1752948312/: events.out.tfevents.1752948335.cris-PC.37364.0
runs/OpenCabinetDrawer-v1__train_ppo_state__1__1752892543/: events.out.tfevents.1752892747.cris-PC.842035.0
runs/OpenCabinetDrawer-v1__train_ppo_state__1__1752892842/: events.out.tfevents.1752892866.cris-PC.848963.0
runs/OpenCabinetDrawer-v1__train_ppo_state__1__1752946419/: events.out.tfevents.1752946493.cris-PC.17814.0
runs/PickCube-v1__train_ppo_depth__1__1752877131/: events.out.tfevents.1752877147.cris-PC.814824.0
runs/PickCube-v1__train_ppo_depth__1__1752877216/: events.out.tfevents.1752877222.cris-PC.816166.0
runs/PickCube-v1__train_ppo_depth__1__1752877254/: events.out.tfevents.1752877258.cris-PC.817430.0
runs/PickCube-v1__train_ppo_depth__1__1752877295/: events.out.tfevents.1752877298.cris-PC.818311.0
runs/PickCube-v1__train_ppo_depth__1__1752891703/: events.out.tfevents.1752891706.cris-PC.837261.0
scripts/: train_ppo_depth.py  train_ppo_state.py
(+24 files in other folders)
